--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,14 @@
   box-sizing: border-box;
 }
 
+html{
+  scroll-behavior: smooth;
+}
+
+body{
+  font-family: 'Roboto', sans-serif;
+}
+
 /* menu fisso */
 
 header{
