--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,12 +26,16 @@ nav{
 }
 
 span{
+  display: inline-block;
   margin-right: 40px;
-  font-size: 30px;
-  border-radius: 50%;
+  font-size: 20px;
   background-color: #FFFFFF;
-  padding: 10px 20px;
-  box-shadow: none;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  border-radius: 50%;
+  text-align: center;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
 }
 
 a{
@@ -40,7 +44,11 @@ a{
 }
 
 span:hover{
-  box-shadow: 3px 3px 6px #000000;
+  box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.7);
+}
+
+span:active{
+  background-color: #808080;
 }
 
 /* corspo del sito */
@@ -55,7 +63,14 @@ section{
 }
 
 div{
-  padding-top: 15vh ;
+  position: absolute;
+  top: 50%;
+  left:50%;
+  transform: translate(-50%, -50%);
+}
+
+section div img{
+  width: 100%;
 }
 
 #scarpa-one{
